// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's ecommerceEvent destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "_update_existing_only": true,
      "app_id": "0Ym3yXKUJe1F[iAlbTrr",
      "braze_id": "0Ym3yXKUJe1F[iAlbTrr",
      "email": "bom@reoko.mh",
      "external_id": "0Ym3yXKUJe1F[iAlbTrr",
      "name": "ecommerce.order_refunded",
      "phone": "0Ym3yXKUJe1F[iAlbTrr",
      "properties": Object {
        "currency": "ZMW",
        "discounts": Array [
          Object {
            "amount": 88954290558730.23,
            "code": "0Ym3yXKUJe1F[iAlbTrr",
          },
        ],
        "metadata": Object {
          "checkout_url": "0Ym3yXKUJe1F[iAlbTrr",
          "order_status_url": "0Ym3yXKUJe1F[iAlbTrr",
        },
        "order_id": "0Ym3yXKUJe1F[iAlbTrr",
        "products": Array [
          Object {
            "image_url": "http://vasvinas.im/lateku",
            "price": 88954290558730.23,
            "product_id": "0Ym3yXKUJe1F[iAlbTrr",
            "product_name": "0Ym3yXKUJe1F[iAlbTrr",
            "product_url": "http://vasvinas.im/lateku",
            "quantity": 88954290558730.23,
            "variant_id": "0Ym3yXKUJe1F[iAlbTrr",
          },
        ],
        "source": "0Ym3yXKUJe1F[iAlbTrr",
        "total_discounts": 88954290558730.23,
        "total_value": 88954290558730.23,
      },
      "time": "2096-12-22T03:45:20.663Z",
      "user_alias": Object {
        "alias_label": "0Ym3yXKUJe1F[iAlbTrr",
        "alias_name": "0Ym3yXKUJe1F[iAlbTrr",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's ecommerceEvent destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "app_id": "0Ym3yXKUJe1F[iAlbTrr",
      "braze_id": "0Ym3yXKUJe1F[iAlbTrr",
      "external_id": "0Ym3yXKUJe1F[iAlbTrr",
      "name": "ecommerce.order_refunded",
      "properties": Object {
        "currency": "ZMW",
        "discounts": Array [
          Object {
            "amount": 88954290558730.23,
            "code": "0Ym3yXKUJe1F[iAlbTrr",
          },
        ],
        "order_id": "0Ym3yXKUJe1F[iAlbTrr",
        "products": Array [
          Object {
            "category": "Test Category",
            "currency": "USD",
            "image_url": "https://example.com/prod-123.jpg",
            "price": 9.99,
            "product_id": "prod-123",
            "product_name": "Test Product",
            "quantity": 1,
            "url": "https://example.com/prod-123",
            "variant_id": "Red",
          },
        ],
        "source": "0Ym3yXKUJe1F[iAlbTrr",
        "total_discounts": 88954290558730.23,
        "total_value": 88954290558730.23,
      },
      "time": "2096-12-22T03:45:20.663Z",
    },
  ],
}
`;
